--- a/public/fr/404.html
+++ b/public/fr/404.html
@@ -101,7 +101,7 @@
 
         <span class="header__right">
                 <nav class="menu">
-    <ul class="menu__inner"><li><a href="http://localhost:1313/fr/about/">About</a></li><li><a href="http://localhost:1313/fr/posts/">Posts</a></li>
+    <ul class="menu__inner"><li><a href="http://localhost:1313/fr/about/">За мен</a></li><li><a href="http://localhost:1313/fr/posts/">Блог</a></li>
     </ul>
 </nav>
 
