--- a/public/about/about/index.html
+++ b/public/about/about/index.html
@@ -112,7 +112,7 @@
 
         <span class="header__right">
                 <nav class="menu">
-    <ul class="menu__inner"><li><a href="http://localhost:1313/about/">За мен</a></li><li><a href="http://localhost:1313/links/">Връзки</a></li><li><a href="http://localhost:1313/posts/">Блог</a></li>
+    <ul class="menu__inner"><li><a href="http://localhost:1313/about/about">За мен</a></li><li><a href="http://localhost:1313/links/">Връзки</a></li><li><a href="http://localhost:1313/posts/">Блог</a></li>
     </ul>
 </nav>
 
